Fix navbar overflow on mobile

--- a/src/components/navbar/style/navigation.css
+++ b/src/components/navbar/style/navigation.css
@@ -24,7 +24,7 @@
   
   .nav-bar a {
     color: black;
-    letter-spacing: 0.4vw;
+    letter-spacing: 0.3vw;
   }
   
   .nav-bar a:hover {
